SWAPファイル削除

--- a/env.yml
+++ b/env.yml
@@ -1,4 +1,8 @@
+#-----------------------------------
+#環境の設定を記載するYMLファイル
+#-----------------------------------
 
+# Redis関連
 redis-server_IP1: 192.168.10.110
 redis-server_IP2: 192.168.10.111
 redis-server_pass1: test1
