fix docker-compose.yml syntax error #112

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,16 @@ services:
     image: emaki
     container_name: emaki
     build:
-      image: emaki
       context: .
       args:
         - http_proxy
         - https_proxy
-    ports: 12321:80
-    volumes: .:/srv/emaki
-    depends_on: db
+    ports:
+      - 12321:80
+    volumes:
+      - .:/srv/emaki
+    depends_on:
+      - db
     env_file: .env
     environment:
       - http_proxy=${http_proxy}
@@ -27,8 +29,10 @@ services:
   db:
     image: postgres
     container_name: emaki_pg
-    ports: 5432:5432
-    volumes: ./db:/var/lib/postgresql
+    ports:
+      - 5432:5432
+    volumes:
+      - ./db:/var/lib/postgresql
     environment:
       - POSTGRES_USER=emaki
       - POSTGRES_PASSWORD=emakipostgres
